# BotPEASS

./: .breakpoints  .gitignore  .replit  README.md  bopteas.py  botpeas.py  cvereporter.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: bopteas.yaml
config/: bopteas.yaml  config.yaml
output/: bopteas.json  record.json
