[tool.poetry]
name = "repl_nix_BotPEASS"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
vulners = "^2.0.2"
discord = "^2.0.0"
requests = "^2.28.1"
Flask = "^2.2.2"
feedparser = "^6.0.10"
aiohttp = "^3.8.1"
waitress = "^2.1.2"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
